<resources>
    <string name="app_name">Heartbeat for Android</string>
    <string name="title_activity_heartbeat_status">Heartbeat Status</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Service Status</string>
    <string name="second_fragment_label">Service Settings</string>
    <string name="next">Settings</string>
    <string name="previous">Back</string>

    <string name="status_fragment_text">Current status:</string>
    <string name="status_running">Running</string>
    <string name="status_not_running">Not Running</string>
    <string name="status_error">ERROR</string>
    <string name="status_unknown">Unknown</string>
    <string name="status_last_push_datetime">Last upload time</string>
    <string name="status_last_push_info">Information pushed</string>
    <string name="status_last_push_location">Last location pushed</string>

    <string name="start_hb">Start</string>
    <string name="stop_hb">Stop</string>

    <!-- Notification System strings -->
    <string name="fgservice_notification_channel_name">Foreground Service</string>
    <string name="fgservice_notification_title">Heartbeat Status</string>
    <string name="fgservice_notification_content_text">Heartbeat is Running</string>


    <!-- Preference Titles -->
    <string name="settings_server_header">Server</string>
    <string name="settings_sync_header">Sync</string>
    <string name="settings_app">User Interface</string>

    <!-- Server Preferences -->
    <string name="setting_server_hostname">Server Hostname / IP</string>

    <string name="setting_server_port">Port Number</string>

    <string name="setting_server_authentication">Authentication Code</string>
    <string name="setting_device_name">Device Name</string>

    <!-- Sync Preferences -->
    <string name="setting_sync_location">Upload location</string>
    <string name="setting_sync_location_summary">Uploads your location with your status.</string>

    <string name="setting_sync_battery">Upload battery status</string>
    <string name="setting_sync_battery_summary">Uploads battery percentage with status.</string>

    <!-- UI Preferences -->
    <string name="setting_ui_theme">Theme</string>

    <string name="setting_ui_show_ads">Show Advertisements</string>
    <string name="setting_ui_show_ads_summary">Like donating, but cheaper.</string>

    <string name="menu_about">About</string>
    <string name="title_activity_about">About</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about">Heartbeat-Android\nOpen source project located at https://github.com/technically-functional/heartbeat-android\nInterfaces with https://github.com/technically-functional/heartbeat\n\nTheme inspired by RosePine: https://rosepinetheme.com\n\nPlease let us know if you find an issue by pressing the button below</string>
    <string name="report_issue">Report an Issue</string>
    <string name="menu_settings">Settings</string>
</resources>