<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_server_header"/>

    <EditTextPreference
        android:key="server_hostname"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_server_hostname"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:key="server_port"
        android:selectAllOnFocus="true"
        android:title="@string/setting_server_port"
        app:useSimpleSummaryProvider="true" />
    <PreferenceCategory app:title="@string/settings_sync_header"/>
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="server_authentication_code"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_server_authentication"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="Default value"
        android:key="device_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/setting_device_name"
        app:useSimpleSummaryProvider="true" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="sync_location"
        android:summary="@string/setting_sync_location_summary"
        android:title="@string/setting_sync_location" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="sync_battery"
        android:summary="@string/setting_sync_battery_summary"
        android:title="@string/setting_sync_battery" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="start_on_boot"
        android:title="Start Heartbeat on Boot" />
    <PreferenceCategory android:title="@string/settings_app">

        <SwitchPreference
            android:defaultValue="false"
            android:key="showAds"
            android:summary="@string/setting_ui_show_ads_summary"
            android:title="@string/setting_ui_show_ads" />
    </PreferenceCategory>
    <ListPreference
        android:defaultValue="dark"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:key="ui_theme"
        android:title="@string/setting_ui_theme"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>